# dashboard

./: .eslintrc.default.js  .eslintrc.js  .gitignore  .gitmodules  Cargo.toml  jest.setup.js  nuxt.config.js  package.json  tsconfig.json
.github/aw/: actions-lock.json
.github/workflows/: daily-issue-grooming-aw.lock.yml  daily-issue-grooming-aw.md  daily-issue-grooming.lock.yml  daily-issue-grooming.yml  dependabot-cooldown.md  port-pr-aw.lock.yml  port-pr-aw.md  port-pr.yaml  release-rancher-components.yml  release-rancher-desktop.yml  test.yaml  update-e2e-rancher-version.yml  update-release-version.yml
bindings/: Annotations.ts  Container.ts  Labels.ts  Metadata.ts  PodTemplate.ts  Port.ts  Spec.ts
components/: BadgeState.vue  Card.vue  HelloWorld.vue  index.js  main.js  package.json  vue.config.js
components/form/: Checkbox.vue  LabeledTooltip.vue
creators/extension/: package.json
cypress/: base-config.ts
docusaurus/: docusaurus.config.js  package.json  tsconfig-typedoc-integration.json  tsconfig.paths.json
hooks/: index.js  render.js  route-redirect-portal.js
pkg/rancher-codemirror/: .eslintcache  .gitignore  eslint.config.ts  package-lock.json  package.json  tsconfig.build.json  vite.config.ts
pkg/rancher-components/: .eslintrc.js  package.json
pkg/rancher-utils/: package.json  tsconfig.json
prompts/: issue-grooming.prompt.yml
scripts/: e2e-docker-start  vue-migrate.js
scripts/standalone/: package.json
shell/: package.json  vue.config.js
shell/core/: plugin.ts  (+3 more)
src/: App.vue  conversions.rs  lib.rs  main.ts
storybook/: package.json
(+384 files in other folders)
