[package]
name = "rancher_yaml"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serde_yaml = "0.9.34+deprecated"
serde-wasm-bindgen = "0.6.5"
ts-rs = "11.1.0"

[lib]
crate-type = ["cdylib"]